--- a/1.1-first-project/first_project/app/templates/app/home.html
+++ b/1.1-first-project/first_project/app/templates/app/home.html
@@ -7,8 +7,7 @@
 <body>
     <h1>Выберите раздел</h1>
     {% for title, url in pages.items %}
-        <a href="{{ url }}">{{ title }}</a>
-        <br>
+        <h2><a href="{{ url }}">{{ title }}</a></h2>
     {% endfor %}
 </body>
 </html>
