--- a/1.2-requests-templates/pagination/stations/templates/stations/index.html
+++ b/1.2-requests-templates/pagination/stations/templates/stations/index.html
@@ -16,8 +16,8 @@
     <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="{% static "css/normalize.css" %}">
-    <link rel="stylesheet" href="{% static "css/skeleton.css" %}">
+    <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
+    <link rel="stylesheet" href="{% static 'css/skeleton.css' %}">
 </head>
 <body>
 <div class="container">
@@ -31,7 +31,7 @@
             </tr>
             </thead>
             <tbody>
-            {% for station in bus_stations %}
+            {% for station in page %}
                 <tr>
                     <td>{{ station.Name }}</td>
                     <td>{{ station.Street }}</td>
